[workspace]
members = ["rediq", "rediq-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["Rediq Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/example/rediq"

[workspace.dependencies]
# 异步运行时
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Redis 客户端
fred = { version = "9.0", features = ["enable-rustls", "partial-tracing"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.1"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 工具
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# 可观测性
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"
metrics = "0.21"

# 配置
config = "0.13"

# CLI
clap = { version = "4.4", features = ["derive"] }
comfy-table = "3.0"

# 测试
tokio-test = "0.4"
