[workspace]
members = ["rediq", "rediq-cli"]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2021"
rust-version = "1.70"
authors = ["Rediq Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/imjdl/rediq"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Redis client
fred = { version = "9.0", features = ["enable-rustls", "partial-tracing"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
cron = { version = "0.12" }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = "0.13"
metrics = "0.21"
warp = { version = "0.3" }

# Configuration
config = "0.13"

# CLI
clap = { version = "4.4", features = ["derive"] }
comfy-table = "3.0"

# Testing
tokio-test = "0.4"
