[package]
name = "rediq-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI tool for Rediq distributed task queue"
keywords = ["cli", "queue", "redis"]
categories = ["command-line-utilities"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
]

[[bin]]
name = "rediq"
path = "src/main.rs"

[dependencies]
# Core library
rediq = { version = "0.2.0", path = "../rediq" }

# Async runtime
tokio = { workspace = true }

# CLI tools
clap = { workspace = true }
comfy-table = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Async utilities
futures = "0.3"

# Color output
color-eyre = "0.6"

# Terminal UI
ratatui = "0.28"
crossterm = "0.28"
chrono = "0.4"
