[package]
name = "rediq"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
documentation = "https://docs.rs/rediq"
description = "A distributed task queue framework for Rust based on Redis"
keywords = ["queue", "redis", "async", "task", "distributed"]
categories = ["asynchronous", "concurrency", "database"]
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-Apache-2.0",
]

[dependencies]
# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Redis client
fred = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = "1.1"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
cron = { workspace = true }
once_cell = "1.19"

# Macros
rediq-macros = { version = "0.2.3", path = "../rediq-macros", optional = true }

# Observability
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus = { workspace = true }
metrics = { workspace = true }
warp = { version = "0.3", optional = true }

[features]
default = []
metrics-http = ["warp"]
macros = ["rediq-macros"]

[dev-dependencies]
tokio-test = { workspace = true }
clap = { version = "4.5", features = ["derive"] }

[[example]]
name = "quickstart"
path = "../examples/quickstart.rs"

[[example]]
name = "auto_test"
path = "../examples/auto_test.rs"

[[example]]
name = "batch_test"
path = "../examples/batch_test.rs"

[[example]]
name = "middleware_test"
path = "../examples/middleware_test.rs"

[[example]]
name = "metrics_test"
path = "../examples/metrics_test.rs"

[[example]]
name = "metrics_http_example"
path = "../examples/metrics_http_example.rs"

[[example]]
name = "priority_queue_example"
path = "../examples/priority_queue_example.rs"

[[example]]
name = "cron_example"
path = "../examples/cron_example.rs"

[[example]]
name = "cluster_example"
path = "../examples/cluster_example.rs"

[[example]]
name = "sentinel_example"
path = "../examples/sentinel_example.rs"

[[example]]
name = "dependency_example"
path = "../examples/dependency_example.rs"

[[example]]
name = "benchmark"
path = "../examples/benchmark.rs"

[[example]]
name = "progress_example"
path = "../examples/progress_example.rs"

[[example]]
name = "macro_example"
path = "../examples/macro_example.rs"
required-features = ["macros"]
